--- a/src/main/webapp/academico/director/template/menu.xhtml
+++ b/src/main/webapp/academico/director/template/menu.xhtml
@@ -51,7 +51,7 @@
 				<h:outputLink
 					value="#{request.contextPath}/director/alterar-matriz.jsf"
 					styleClass="dropdown-item">
-								Finalizar matriz curricular
+								Gerir matriz curricular
 							</h:outputLink>
 
 			</div></li>
