--- a/src/main/webapp/academico/professor/template/menu.xhtml
+++ b/src/main/webapp/academico/professor/template/menu.xhtml
@@ -50,7 +50,7 @@
 
 				<h:commandLink action="#{notaBean.relatorioNotas}"
 					styleClass="dropdown-item">
-							Emitir minhas cadernatas
+							Emitir minhas cadernetas
 						</h:commandLink>
 
 			</div></li>
