--- a/src/main/webapp/academico/aluno/template/meusdados.xhtml
+++ b/src/main/webapp/academico/aluno/template/meusdados.xhtml
@@ -49,22 +49,27 @@
 
 					<h:panelGroup
 						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-						<div class="form-group row">
-							<h:outputLabel styleClass="tesx-right col-sm-2 col-form-label"
-								value="Senha:*" />
-							<div class="col-sm-6">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório">
-									<f:passThroughAttribute name="placeholder"
-										value="Introduza a sua senha" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
+
+						<div class="form-group">
+							<div class="col-sm-6" style="padding-left: 0;">
+								<div class="input-group">
+									<h:inputSecret styleClass="form-control font-size16"
+										value="#{buscarFotoBean.autenticarSenha}" required="true"
+										requiredMessage="o campo senha é obrigatório">
+										<f:passThroughAttribute name="placeholder"
+											value="Introduza a sua senha" />
+
+									</h:inputSecret>
+
+									<span class="input-group-btn"> <h:commandButton
+											value="Autenticar" styleClass="btn btn-primary"
+											actionListener="#{buscarFotoBean.autenticar}" />
+
+									</span>
+								</div>
+
 							</div>
 						</div>
-						<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
-							styleClass="btn btn-primary"
-							actionListener="#{buscarFotoBean.autenticar}" />
 
 					</h:panelGroup>
 					<h:panelGroup
@@ -127,8 +132,7 @@
 						</div>
 
 						<div style="margin-left: 8%;">
-							<h:commandButton
-								action="#{buscarFotoBean.voltar}"
+							<h:commandButton action="#{buscarFotoBean.voltar}"
 								value="Cancelar" styleClass="btn btn-success" />
 
 							<h:commandButton action="#{buscarFotoBean.atualizarDados}"
