--- a/src/main/webapp/academico/director/template/meusdados.xhtml
+++ b/src/main/webapp/academico/director/template/meusdados.xhtml
@@ -18,8 +18,7 @@
 		<ui:include src="/academico/director/template/menu.xhtml" />
 	</ui:define>
 	<ui:define name="dados_pessoas">
-		<ui:include
-			src="/academico/director/template/dados_pessoas.xhtml" />
+		<ui:include src="/academico/director/template/dados_pessoas.xhtml" />
 	</ui:define>
 
 	<ui:define name="ambiente_comum">
@@ -30,7 +29,7 @@
 			<div class="card">
 				<h4 class="peg-titulo card-header primary-color white-text ">
 
-					<h:outputText value="Meus Dados" style="font-weight: 700;" />
+					<h:outputText value="Meus dados" style="font-weight: 700;" />
 
 				</h4>
 				<h:panelGroup
@@ -50,23 +49,28 @@
 
 					<h:panelGroup
 						rendered="#{buscarFotoBean.alterarSenhaUsuarioBoolean ==false}">
-						<div class="form-group row">
-							<h:outputLabel  styleClass="tesx-right col-sm-2 col-form-label"
-								value="Senha:*" />
-							<div class="col-sm-6">
-								<h:inputSecret styleClass="form-control font-size16"
-									value="#{buscarFotoBean.autenticarSenha}" required="true"
-									requiredMessage="o campo senha é obrigatório"
-									>
-									<f:passThroughAttribute name="placeholder"
-										value="Introduza a sua senha" />
-									<f:passThroughAttribute name="autofocus" value="true" />
-								</h:inputSecret>
+
+						<div class="form-group">
+							<div class="col-sm-6" style="padding-left: 0;">
+								<div class="input-group">
+									<h:inputSecret styleClass="form-control font-size16"
+										value="#{buscarFotoBean.autenticarSenha}" required="true"
+										requiredMessage="o campo senha é obrigatório">
+										<f:passThroughAttribute name="placeholder"
+											value="Introduza a sua senha" />
+
+									</h:inputSecret>
+
+									<span class="input-group-btn"> <h:commandButton
+											value="Autenticar" styleClass="btn btn-primary"
+											actionListener="#{buscarFotoBean.autenticar}" />
+
+									</span>
+								</div>
+
 							</div>
 						</div>
-						<h:commandButton value="Autenticar" style="margin: 2% 0 6% 23%;"
-							styleClass="btn btn-primary"
-							actionListener="#{buscarFotoBean.autenticar}" />
+
 
 					</h:panelGroup>
 					<h:panelGroup
@@ -75,10 +79,9 @@
 						<div class="form-group row">
 							<h:outputLabel styleClass="col-sm-2 col-form-label"
 								value="Usuário:" />
-							<div class="col-sm-6">
+							<div class="col-sm-3">
 								<h:inputText value="#{buscarFotoBean.usuario.login}"
-									styleClass="form-control" style="margin-left: -3%;"
-									disabled="true" />
+									styleClass="form-control" disabled="true" />
 							</div>
 						</div>
 
@@ -86,8 +89,9 @@
 							<h:outputLabel styleClass="col-sm-2 col-form-label"
 								value="Nome Completo:" />
 							<div class="col-sm-8">
-								<h:inputText disabled="true" value="#{buscarFotoBean.usuario.nome}"
-									styleClass="form-control"  />
+								<h:inputText disabled="true"
+									value="#{buscarFotoBean.usuario.nome}"
+									styleClass="form-control" />
 							</div>
 						</div>
 
@@ -97,7 +101,6 @@
 							<div class="col-sm-7">
 								<h:inputText value="#{buscarFotoBean.usuario.email}"
 									styleClass="form-control"
-									
 									validatorMessage="Email inválido. Por favor introduza um Email correcto!">
 									<f:passThroughAttribute name="placeholder"
 										value="exemplo@exemplos.com"></f:passThroughAttribute>
@@ -108,10 +111,10 @@
 						</div>
 
 						<div class="form-group row">
-							<h:outputLabel styleClass="col-sm-2 col-form-label" value="Gênero:" />
+							<h:outputLabel styleClass="col-sm-2 col-form-label"
+								value="Gênero:" />
 							<div class="col-sm-3">
 								<h:selectOneMenu styleClass="form-control"
-									
 									value="#{buscarFotoBean.usuario.sexo}">
 									<f:selectItem itemLabel="MASCULINO" itemValue="true" />
 									<f:selectItem itemLabel="FEMENINO" itemValue="false" />
@@ -123,20 +126,20 @@
 								value="Telefone : " />
 							<div class="col-sm-3">
 								<h:inputText value="#{buscarFotoBean.usuario.telefone}"
-									styleClass="form-control " 
+									styleClass="form-control "
 									onkeypress="return formata_mascara(this, event)" />
 							</div>
 						</div>
 
 						<div style="margin-left: 8%;">
-
-							<h:commandButton action="#{buscarFotoBean.atualizarDados}"
-								value="Guardar" styleClass="btn btn-primary" />
-
-							<h:commandButton
-								action="/academico/director/index?faces-redirect=true"
-								value="Cancelar" styleClass="btn btn-success"
+							<h:commandButton action="#{buscarFotoBean.voltar}"
+								value="Cancelar" styleClass="btn btn-success" />
+							
+							<h:commandButton actionListener="#{buscarFotoBean.atualizarDados}"
+								value="Guardar" styleClass="btn btn-primary"
 								style="margin-left: 6px;" />
+
+
 
 						</div>
 
