--- a/src/main/webapp/academico/relatorio/aluno/alunos_turma_por_disciplina.jrxml
+++ b/src/main/webapp/academico/relatorio/aluno/alunos_turma_por_disciplina.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2018-07-23T07:31:27 -->
+<!-- 2018-08-05T22:20:22 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e580ad1c-f19a-4ded-8190-5074b08cf536">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="src\main\webapp\academico\relatorio\Conexao.xml"/>
@@ -87,34 +87,37 @@ ORDER BY matricula.numeroalunoturma ASC]]>
 	<title>
 		<band height="146" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="115" width="555" height="15" uuid="8335cd31-d2cf-4c94-93ef-e3aa331e56a8">
+				<reportElement x="0" y="119" width="555" height="15" uuid="8335cd31-d2cf-4c94-93ef-e3aa331e56a8">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.3"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Courier New" size="10" isBold="true"/>
+					<font fontName="Courier New" size="12" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{escola}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{escola}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="98" width="555" height="15" uuid="13255277-3644-4e28-b997-1a224d05afda">
+				<reportElement x="77" y="97" width="403" height="16" uuid="13255277-3644-4e28-b997-1a224d05afda">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 				</reportElement>
+				<box>
+					<bottomPen lineWidth="0.3"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Courier New" size="10" isBold="true"/>
+					<font fontName="Courier New" size="12" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Governo do Distrito de "+$F{distrito}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Governo do Distrito de ".toUpperCase()+$F{distrito}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="0" y="82" width="555" height="15" uuid="7f37e93f-ff0f-4413-beaf-07e93d4968a9">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 				</reportElement>
-				<textElement textAlignment="Center">
-					<font fontName="Courier New" size="10" isBold="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Courier New" size="12" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Província de "+$F{provincia}.replace("MANICA", "Manica" ).replace("TETE", "Tete" ).replace("SOFALA", "Sofala" ).replace("GAZA", "Gaza" ).replace("INHAMBANE", "Inhambane" ).replace("ZAMBEZIA", "Zambezia").replace("NAMPULA", "Nampula").replace("NIASSA", "Niassa").replace("CABO_DELEGADO", "Cabo Delegado").replace( "MAPUTO", "Maputo" )]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Província de ".toUpperCase()+$F{provincia}.toUpperCase()]]></textFieldExpression>
 			</textField>
 			<image hAlign="Center">
 				<reportElement x="0" y="33" width="555" height="29" uuid="5538a7d0-17eb-49c8-af04-bf26061674cb"/>
@@ -124,10 +127,10 @@ ORDER BY matricula.numeroalunoturma ASC]]>
 				<reportElement x="0" y="64" width="555" height="15" uuid="24fc7f4f-f4c6-40eb-94aa-9f7807d0bce1">
 					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 				</reportElement>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Courier New" size="10" isBold="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
+					<font fontName="Courier New" size="12" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["República de Moçambique"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["República de Moçambique".toUpperCase()]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
